# shahanshahi

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SPEC.md  deny.toml  release-plz.toml
.cursor/rules/: calendar-algorithm-readability.mdc  contributor-attribution.mdc  git-commit-messages.mdc  git-granular-commits.mdc  git-pull-requests.mdc
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_or_calendar.md
.github/workflows/: audit.yml  ci.yml  clippy.yml  crate-package.yml  labeler.yml  release-plz.yml  rustfmt.yml  test.yml
crates/shahanshahi/: Cargo.toml
crates/shahanshahi/examples/: convert_legal_era.rs  convert_proleptic.rs
crates/shahanshahi/src/: chrono_compat.rs  convert.rs  date.rs  gregorian.rs  leap.rs  lib.rs  rata_die.rs  time_compat.rs
crates/shahanshahi/tests/: interop_chrono_time.rs  reference_dates.rs  serde_roundtrip.rs
data/: reference-dates.json  reference-dates.schema.json
docs/: CALENDAR_CODE_STYLE.md  COMMIT_MESSAGES.md  ENGINEERING.md  MIGRATING.md  VISION.md
