[package]
name = "shahanshahi"
description = "Shahanshahi (Imperial Iranian) civil calendar types and conversions — spec-first, pre-1.0"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
